# uORM

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  config.json
cmake/: UORMConfigVersion.cmake  uORMConfig.cmake  uORMConfig.cmake.in
examples/: full_usage_example.cpp  main.cpp
include/common/utils/: ConfigManager.h
include/orm/: Adapter.h  DAO.h  Field.h  Model.h  MySQLAdapter.h  MySQLConnectionPool.h  SqlTypes.h
include/uORM/driver/: ConfigManager.h  ConnectionPool.h  DBInterfaces.h  SqlDialect.h
include/uORM/driver/mysql/: MySQLWrapper.h
include/uORM/driver/postgresql/: PostgreSQLWrapper.h
include/uORM/orm/: Error.h  Mapper.h  ORM.h  Query.h  Reflection.h  Schema.h  SqlValue.h
src/common/utils/: ConfigManager.cpp
src/orm/: MySQLAdapter.cpp  MySQLAdapter.h  MySQLConnectionPool.cpp
